Внесена новая переменная wasRunning типа boolean для того, чтобы приложение приложение продолжало работу после остановки либо перекрытия другой активностью в случае, если оно было запущено до этого. Добавлены методы onStart(), onResume(), onStop() и onPause(). Приведены некоторые пояснения

--- a/app/src/main/res/layout/activity_stopwatch.xml
+++ b/app/src/main/res/layout/activity_stopwatch.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="@android:style/TextAppearance.Large"
-        android:text="hellworld"
+        android:text="@string/timer"
         />
     <Button
         android:layout_width="wrap_content"
